infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: book.dev
      http:
        paths:
          - path: /api/checkout/?(.*)
            pathType: Prefix
            backend:
              service:
                name: checkout-srv
                port:
                  number: 3000
          - path: /api/cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-srv
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/stationery/?(.*)
            pathType: Prefix
            backend:
              service:
                name: stationery-srv
                port:
                  number: 3000
          - path: /api/books/?(.*)
            pathType: Prefix
            backend:
              service:
                name: books-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
